--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Explore Top Open Source Projects</title>
+		<title>oss-projects</title>
 	</head>
 	<body>
 		<div id="root"></div>
